@@ -872,8 +872,9 @@ ad_process_source_tree()
 {
   ad_debug "Starting processing source files: $1"
 
-  # We take only C/C++ files since they use the C compiler friendly
-  # version of distdefs.  Other files are not assumed to use them.
+  # We take only C/C++ (and other files that are run through traditional
+  # preprocessor) files since they use the C compiler friendly version
+  # of distdefs.  Other files are not assumed to use them.
   files=`find $am_distdir -type f \! -name \*\.ad \( \
  	-name \*\.[cC] -o \
  	-name \*\.[cC][cCpP] -o \
@@ -881,6 +882,13 @@ ad_process_source_tree()
  	-name \*\.[cC][pP][pP] -o \
  	-name \*\.[cC]++ -o \
  	-name \*\.m -o \
+ 	-name \*\.mm -o \
+ 	-name \*\.M -o \
+ 	-name \*\.S -o \
+ 	-name \*\.F -o \
+ 	-name \*\.F90 -o \
+ 	-name \*\.F95 -o \
+ 	-name \*\.[fF][pP][pP] -o \
  	-name \*\.[hH] -o \
  	-name \*\.hh -o \
  	-name \*\.[cC]\.in -o \
@@ -1186,7 +1194,7 @@ ad_parse_distribution()
   prereq=`sed 's/^[ 	]*//' < $distdir/$1 | grep -v "^#" \
     | grep "prereq " | cut -d' ' -f2- | sort | uniq`
   if test '!' -z $prereq; then
-    if [[ $ver < $prereq ]]; then
+    if test "$ver" \< "$prereq"; then
       ad_fatal "Autodist $prereq or newer is required for distribution $1"
     fi
   fi
@@ -1841,9 +1849,9 @@ ad_run_dist_hooks()
 usage="Usage: autodist [options] [distribution] [version] [params]"
 help="\
 Autodist prepares source tree for configuration, compilation and
-distribution.  Generates Automake.am files from Automake.ad files, 
-configure.ac file from configure.ad file(s), generates the configure 
-script by running Autoconf tool, and generates Makefile.in files by 
+distribution.  Generates Automake.am files from Automake.ad files,
+configure.ac file from configure.ad file(s), generates the configure
+script by running Autoconf tool, and generates Makefile.in files by
 running Automake tool.
 
 Operation modes:
@@ -2004,7 +2012,9 @@ else
 fi
 
 # Get extra parameters from command line
-shift
+if test $# != 0; then
+  shift
+fi
 
 #
 # Run pre-hooks
